--- a/eeg_eye_state/Dockerfile
+++ b/eeg_eye_state/Dockerfile
@@ -7,6 +7,6 @@ RUN apt-get update && \
     apt-get install -y --no-install-recommends libav-tools && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
-    pip install h5py tensorflow==1.5.0rc0 keras matplotlib seaborn
+    pip install h5py tensorflow==1.5.0rc0 keras sklearn matplotlib seaborn
 
 USER $NB_USER
